few small changes to style

--- a/my-cv.html
+++ b/my-cv.html
@@ -3,9 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My CV</title>
 </head>
-<body>
+<body style="background-color: lightgrey; color:darkred">
+
+    <h2 style="text-align: center;">Trevor Osborne</h2>
+    <address style="text-align: center;">1234 Osborne Blvd, Loveland, OH 45140 | 513-123-4567 | trevor@osborne.com</address>
+
+    <br>
+
+    <h3><u>Technologies</u></h3>
+    <table>
+        <tr>
+            <td>Java</td>
+            <td>HTML</td>
+            <td>CSS</td>
+            <td>Javascript</td>
+        </tr>
+        <tr>
+            <td>Git</td>
+            <td>GitHub</td>
+            <td>JSON</td>
+            <td>Spring</td>
+        </tr>
+    </table>
+
+    <br>
     
+    <h3><u>Career Goals</u></h3>
+    <p>
+        My current focus in terms of career goals is to complete
+        the <a href="https://maxtrain.com">MAX Technical Training</a>
+        Java bootcamp in order to give myself a more
+        well-rounded base of Java knowledge. At my current
+        job at Kroger Technology, I am on a legacy team
+        which is being phased out in the near future. I am taking
+        part in this bootcamp so that I can transition into one
+        of the modern teams and be a valuable asset.
+    </p>
+    <p>
+        Long term, my career goals are to be the best software
+        developer that I can be. This includes knowing and being
+        proficient in multiple programming languages and having
+        many years of experience in each. My plan is to be a
+        well-rounded developer who can tackle a problem in many
+        different ways. I also desire to mentor young developers
+        as my past mentors have mentored me.
+    </p>
+
+    <br>
+
+    <h3><u>Work Experience</u></h3>
+    <div>
+        <h4>Java Developer</h4>
+        <p>Kroger Technology</p>
+        <p>2018-present</p>
+        <p>Accomplishments include:
+            <ul>
+                <li>Enhancements to CAO Host website</li>
+                <li>Creation of multiple data-pull scripts</li>
+                <li>Self-improvement via completing code bootcamp</li>
+            </ul>
+        </p>
+    </div>
+    <div>
+        <h4>Call Center Specialist</h4>
+        <p>Kroger Technology</p>
+        <p>2018-2018</p>
+        <p>Accomplishments include:
+            <ul>
+                <li>Desktop, W2, and Jewelery skills</li>
+                <li>Leading a team of 2nd shift Desktop specialists</li>
+            </ul>
+        </p>
+    </div>
+    <div>
+        <h4>Student Coder</h4>
+        <p>Ohio State University Office of Student Life</p>
+        <p>2015-2017</p>
+        <p>Accomplishments include:
+            <ul>
+                <li>Enhancements to OSU timekeeping website</li>
+                <li>Learning an enterprise coding environment</li>
+                <li>Working with students and mentors to obtain knowledge</li>
+            </ul>
+        </p>
+    </div>
+
+    <br>
+    
+    <h3><u>Education</u></h3>
+    <div>
+        <h4>Ohio State University</h4>
+        <p>Electrical and Computer Engineering</p>
+        <p>2018</p>
+    </div>
+
+
 </body>
 </html>
